Clean up CVS directories and .DS_Store files before packages & DMG are built. Correctly determine release version number. Update ReadMe.html with current information. Make debugging control line consistent across scripts. Tweak whitespace in documentation.

--- a/macosx/src/gutenprint.pkg.src/Resources/ReadMe.html
+++ b/macosx/src/gutenprint.pkg.src/Resources/ReadMe.html
@@ -10,8 +10,8 @@ ReadMe
 
 <BODY style="font-size:110%;">
 
-<h1 style="margin-bottom:0em;">Gutenprint 5.2.10</h1>
-<h2 style="margin-top:0em;">released July 7, 2012</h2>
+<h1 style="margin-bottom:0em;">Gutenprint 5.2.10-pre1</h1>
+<h2 style="margin-top:0em;">released February 17, 2014</h2>
 
 <h3 style="margin-bottom:0em;">Software Requirements</h3>
 <p style="margin-top:0.25em;">
@@ -19,9 +19,8 @@ ReadMe
 </p>
 
 <p>
-Welcome to Gutenprint 5.2.10, a stable release of Gutenprint 5.2.  This
-release has bug fixes, support for some new printers, and a few new
-features.  Please read these release notes carefully.
+Welcome to Gutenprint 5.2.10-pre1, a pre-release of Gutenprint
+5.2.10. Please read these release notes carefully.
 </p>
 
 
@@ -29,12 +28,12 @@ features.  Please read these release notes carefully.
 <ul style="margin-top:0.25em; list-style-type:disc;">
 	<li><b>The Gutenprint drivers do not support any other functions such as scanning on all-in-one devices. </b></li>
 	<li><b>The Mac OS X Gutenprint package download does not contain the PPDs for the supported printers. This significantly reduces the size of the download. All necessary files will be written during installation.</b></li>
-	<li><b>For OS X 10.6.x (Snow Leopard) and OS X 10.7.x (Lion) users, PPD files will be created when you add the printer.</b></li>
-	<li><b>For OS X 10.4.x (Tiger), and OS X 10.5.x (Leopard) users, the PPDs are written to your boot drive during the installation process.  This will take some extra time and it may seem that the installation has run into a problem or is hung. For older machines running OS X 10.5, it may take ten to twenty minutes or more. Please be patient.</b></li>
+	<li><b>For OS X 10.6.x (Snow Leopard) and above, PPD files will be created when you add the printer.</b></li>
+	<li><b>For OS X 10.4.x (Tiger), and OS X 10.5.x (Leopard), the PPDs are written to your boot drive during the installation process.  This will take some extra time and it may seem that the installation has run into a problem or is hung. For older machines running OS X 10.5, it may take ten to twenty minutes or more. Please be patient.</b></li>
 </ul>
 
 <p>
-Gutenprint evolved from Gimp-Print, which originated as the print facility for the open source GNU Image Manipulation Program (GIMP).  It has matured into an independent suite of printer drivers compatible with most UNIX print spooling systems, such as the CUPS spooler in Mac OS X (10.3 and later).  The Gutenprint drivers provide printing quality for UNIX/Linux that in many cases is equal to or better than proprietary vendor-supplied drivers; they can be used for many of the most demanding printing tasks.
+Gutenprint evolved from Gimp-Print, which originated as the print facility for the open source GNU Image Manipulation Program (GIMP).  It has matured into an independent suite of printer drivers compatible with most UNIX print spooling systems, such as the CUPS spooler in Mac OS X (10.4 and later).  The Gutenprint drivers provide printing quality for UNIX/Linux that in many cases is equal to or better than proprietary vendor-supplied drivers; they can be used for many of the most demanding printing tasks.
 </p>
 
 <h3 style="margin-bottom:0em;">Changes from 5.2.9</h3>
