--- a/macosx/src/gutenprint.pkg.src/Resources/ReadMe.html
+++ b/macosx/src/gutenprint.pkg.src/Resources/ReadMe.html
@@ -15,7 +15,7 @@ ReadMe
 
 <h3 style="margin-bottom:0em;">Software Requirements</h3>
 <p style="margin-top:0.25em;">
-<b>System software:</b> Mac OS X Tiger (10.4.x) or later.
+<b>System software:</b> Mac OS X Leopard (10.5.x) or later.
 </p>
 
 <p>
@@ -29,11 +29,11 @@ Welcome to Gutenprint 5.2.10-pre1, a pre-release of Gutenprint
 	<li><b>The Gutenprint drivers do not support any other functions such as scanning on all-in-one devices. </b></li>
 	<li><b>The Mac OS X Gutenprint package download does not contain the PPDs for the supported printers. This significantly reduces the size of the download. All necessary files will be written during installation.</b></li>
 	<li><b>For OS X 10.6.x (Snow Leopard) and above, PPD files will be created when you add the printer.</b></li>
-	<li><b>For OS X 10.4.x (Tiger), and OS X 10.5.x (Leopard), the PPDs are written to your boot drive during the installation process.  This will take some extra time and it may seem that the installation has run into a problem or is hung. For older machines running OS X 10.5, it may take ten to twenty minutes or more. Please be patient.</b></li>
+	<li><b>For OS X 10.5.x (Leopard) the PPDs are written to your boot drive during the installation process.  This will take some extra time and it may seem that the installation has run into a problem or is hung. For older machines running OS X 10.5, it may take ten to twenty minutes or more. Please be patient.</b></li>
 </ul>
 
 <p>
-Gutenprint evolved from Gimp-Print, which originated as the print facility for the open source GNU Image Manipulation Program (GIMP).  It has matured into an independent suite of printer drivers compatible with most UNIX print spooling systems, such as the CUPS spooler in Mac OS X (10.4 and later).  The Gutenprint drivers provide printing quality for UNIX/Linux that in many cases is equal to or better than proprietary vendor-supplied drivers; they can be used for many of the most demanding printing tasks.
+Gutenprint evolved from Gimp-Print, which originated as the print facility for the open source GNU Image Manipulation Program (GIMP).  It has matured into an independent suite of printer drivers compatible with most UNIX print spooling systems, such as the CUPS spooler in Mac OS X (10.5 and later).  The Gutenprint drivers provide printing quality for UNIX/Linux that in many cases is equal to or better than proprietary vendor-supplied drivers; they can be used for many of the most demanding printing tasks.
 </p>
 
 <h3 style="margin-bottom:0em;">Changes from 5.2.9</h3>
